--- a/index.html
+++ b/index.html
@@ -134,13 +134,13 @@
             </ul>
             <ul class="navbar-nav">
                 <li>
-                    <a href="#projetos" class="nav-link" style=color:white> Projetos</a>
+                    <a href="#depoimentos" class="nav-link" style=color:white>Depoimentos</a>
                 </li>
                 <li>
                     <a href="#sobre-mim" class="nav-link" style=color:white>Sobre mim</a>
                 </li>
                 <li>
-                    <a href="#depoimentos" class="nav-link" style=color:white>Depoimentos</a>
+                    <a href="#projetos" class="nav-link" style=color:white> Projetos</a>
                 </li>
                 <li>
                     <a href="#competencias" class="nav-link" style=color:white>Competências</a>
@@ -151,6 +151,7 @@
             </ul>
         </div>
     </nav>
+    <!--Social Media-->
     <section class="jumbotron text-center corPrimaria">
         <div class="contaner">
             <img src="me.jpg" class="foto-perfil" alt="Responsive image">
@@ -167,7 +168,66 @@
             <div class="space1">
             </div>
     </section>
-     <!-- Projetos -->
+    <!--Depoimentos-->
+    </section>
+    <section Id="depoimentos">
+        <div class="album py-5 bg-light">
+            <div class="container">
+                <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
+                <div class="space3">
+                </div>
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, além da grande dedicação nas disciplinas.</p>
+                    <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
+                    </footer>
+                </blockquote>
+                <div class="space4">
+                </div>
+                <blockquote class="blockquote text-center">
+                    <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
+                        Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
+                        pró-ativa e altamente eficiente.</p>
+                    <footer class="blockquote-footer">Ricardo Frolich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title"> UFN</cite>
+                    </footer>
+                </blockquote>
+                <div class="space5">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--Descrição-->
+    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
+        <div class="container">
+            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
+            <h4>PT-BR</h4>
+            <br>
+            <p class="lead paragrafoBrancos">
+                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
+
+                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
+
+                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
+
+                Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
+                <div class="space2">
+                </div>
+        </div>
+        <div class="container">
+            <h2 class="jumbotron-heading titulosBrancos">about me</h2>
+            <h4>ENG</h4>
+            <br>
+            <p class="lead paragrafoBrancos">
+                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
+
+                I am immersed in a journey of discovery and constant learning. Even before joining UFN, I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
+
+                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.
+
+                I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
+            </p>
+            <br>
+            <br>
+         <!-- Projetos -->
     <section class="projetos">
      <div class="album py-5 bg-light " id="projetos">
            <div class="container">
@@ -283,65 +343,6 @@
                        </div>
                    </div>
                </div> 
-            </div>
-        </div>
-    </section>
-    <!--Descrição-->
-    <section class="jumbotron text-center corPrimaria" id="sobre-mim">
-        <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">Sobre mim</h2>
-            <h4>PT-BR</h4>
-            <br>
-            <p class="lead paragrafoBrancos">
-                Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
-
-                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
-
-                Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
-
-                Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
-                <div class="space2">
-                </div>
-        </div>
-        <div class="container">
-            <h2 class="jumbotron-heading titulosBrancos">about me</h2>
-            <h4>ENG</h4>
-            <br>
-            <p class="lead paragrafoBrancos">
-                Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
-
-                I am immersed in a journey of discovery and constant learning. Even before joining UFN, I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
-
-                I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.
-
-                I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
-            </p>
-            <br>
-            <br>
-    <!--Depoimentos-->
-    </section>
-    <section Id="depoimentos">
-        <div class="album py-5 bg-light">
-            <div class="container">
-                <h2 class="text-center jumbotron-heading titulosVerdes">Depoimentos</h2>
-                <div class="space3">
-                </div>
-                <blockquote class="blockquote text-center">
-                    <p class="mb-0">É uma profissional que tem um futuro muito promissor pela frente! Com um foco enorme em suas tarefas diárias, além da grande dedicação nas disciplinas.</p>
-                    <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
-                    </footer>
-                </blockquote>
-                <div class="space4">
-                </div>
-                <blockquote class="blockquote text-center">
-                    <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
-                        Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
-                        pró-ativa e altamente eficiente.</p>
-                    <footer class="blockquote-footer">Ricardo Frolich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title"> UFN</cite>
-                    </footer>
-                </blockquote>
-                <div class="space5">
-                </div>
             </div>
         </div>
     </section>
