--- a/index.html
+++ b/index.html
@@ -227,7 +227,9 @@
             </p>
             <br>
             <br>
-         <!-- Projetos -->
+        </div>
+    </section>
+    <!-- Projetos -->
     <section class="projetos">
      <div class="album py-5 bg-light " id="projetos">
            <div class="container">
