--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
             </p>
             <br>
             <br>
+            <div class="space2">
         </div>
     </section>
     <!-- Projetos -->
@@ -345,9 +346,9 @@
                        </div>
                    </div>
                </div> 
-            </div>
-        </div>
-    </section>
+          </div>
+     </div>
+</section>
  <!-- Competências -->
 <section id="competencias">
     <div class="container text-center">
