--- a/index.html
+++ b/index.html
@@ -311,7 +311,9 @@
                                        <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                        <a href="https://lauramachts0.github.io/RelogioDigital-HTML-CSS-Javascript/" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a> 
                                    </div>
+                                   <div>
                                    <small class="text-muted">Projeto Web</small>
+                                   </div>
                                </div>
                            </div>
                        </div>
@@ -338,7 +340,9 @@
                                        <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
                                        <a href="https://www.youtube.com/playlist?list=PL15o6qu0MNGdwp6SFvsYMmqyPyVuoufid" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a>
                                    </div>
+                                   <div>
                                    <small class="text-muted">Projeto Web</small>
+                                   </div>
                                </div>
                             </div>
                        </div>
