--- a/index.html
+++ b/index.html
@@ -308,6 +308,7 @@
                                       <div class="btn-group">
                                           <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
                                           <a href="https://github.com/lauramachts0/RelogioDigital-HTML-CSS-Javascript/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                          <a href="https://lauramachts0.github.io/RelogioDigital-HTML-CSS-Javascript/" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a> 
                                       </div>
                                   </div>
                                   <div>
@@ -336,6 +337,7 @@
                                       <div class="btn-group">
                                           <a href="https://github.com/lauramachts0/PianoProject" target="_blank" class="btn btn-sm btn-outline-success">Ver Projeto</a>
                                           <a href="https://github.com/lauramachts0/PianoProject/blob/main/index.html" target="_blank" class="btn btn-sm btn-outline-primary">Ver Código</a>
+                                          <a href="https://www.youtube.com/playlist?list=PL15o6qu0MNGdwp6SFvsYMmqyPyVuoufid" target="_blank" class="btn btn-sm btn-outline-success">Ver em<br>Funcionamento</br></a>
                                       </div>
                                     </div>    
                                 <div>                   
