--- a/index.html
+++ b/index.html
@@ -87,6 +87,12 @@
             color: rgb(236, 236, 236);
             margin-left: 4;
         }
+        .border{
+            color: #454f52;
+        }
+        .space{
+            margin-bottom: 10px;
+        }
         .space1{
             margin-bottom: 160px;
         }
@@ -168,6 +174,9 @@
             <div class="space1">
             </div>
     </section>
+    <section class="border">
+        <div class="space"></div>
+    </section>
     <!--Depoimentos-->
     </section>
     <section Id="depoimentos">
@@ -194,6 +203,9 @@
                 </div>
             </div>
         </div>
+    </section>
+    <section class="border">
+        <div class="space"></div>
     </section>
     <!--Descrição-->
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -227,6 +239,9 @@
             </p>
             <div class="space2">
         </div>
+    </section>
+    <section class="border">
+        <div class="space"></div>
     </section>
     <!--Projetos-->
     <section class="projetos">
