--- a/index.html
+++ b/index.html
@@ -177,6 +177,7 @@
     <section class="border">
         <div class="space"></div>
     </section>
+    <div class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)"></div>
     <!--Depoimentos-->
     </section>
     <section Id="depoimentos">
@@ -240,9 +241,7 @@
             <div class="space2">
         </div>
     </section>
-    <section class="border">
-        <div class="space"></div>
-    </section>
+    <div class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)"></div>
     <!--Projetos-->
     <section class="projetos">
         <div class="album py-5 bg-light " id="projetos">
