--- a/index.html
+++ b/index.html
@@ -87,12 +87,6 @@
             color: rgb(236, 236, 236);
             margin-left: 4;
         }
-        .border{
-            color: #454f52;
-        }
-        .space{
-            margin-bottom: 5px;
-        }
         .space1{
             margin-bottom: 160px;
         }
@@ -174,7 +168,8 @@
             <div class="space1">
             </div>
     </section>
-    <div class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)"></div>
+    <div class="navbar" style="background-color:rgb(32, 48, 65)">
+    </div>
     <!--Depoimentos-->
     </section>
     <section Id="depoimentos">
@@ -201,9 +196,6 @@
                 </div>
             </div>
         </div>
-    </section>
-    <section class="border">
-        <div class="space"></div>
     </section>
     <!--Descrição-->
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -238,7 +230,8 @@
             <div class="space2">
         </div>
     </section>
-    <div class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)"></div>
+    <div class="navbar" style="background-color:rgb(32, 48, 65)">
+    </div>
     <!--Projetos-->
     <section class="projetos">
         <div class="album py-5 bg-light " id="projetos">
