--- a/index.html
+++ b/index.html
@@ -43,7 +43,6 @@
         .icones {
             padding-left: 5px;
         }
-
         .titulosBrancos {
             text-decoration: underline;
             text-underline-position: under;
@@ -61,14 +60,13 @@
             font-weight: 700;
             color: #18bc9c
         }
-
         .paragrafoBrancos {
             color: white !important;
         }
-
-
         .jumbotron {
             margin-bottom: 0px;
+            margin-bottom: 0px;
+            border-radius: 0;
         }
 
         html {
@@ -78,7 +76,6 @@
         p {
             color: black !important;
         }
-
         .corPrimaria {
             background-color: #1d4d5c;
             background: linear-gradient(120deg, #408ba1, #0f3944);
