--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
             <div class="space1">
             </div>
     </section>
-    <div class="navbar" style="background-color:rgb(32, 48, 65)">
+    <div class="navbar-divider" style="background-color:#18bc9c; height: 3px; margin: 0px 0;"></div>
     </div>
     <!--Depoimentos-->
     </section>
@@ -193,6 +193,7 @@
                 </div>
             </div>
         </div>
+        <div class="navbar-divider" style="background-color:#18bc9c; height: 3px; margin: 0px 0;"></div>
     </section>
     <!--Descrição-->
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -227,7 +228,7 @@
             <div class="space2">
         </div>
     </section>
-    <div class="navbar" style="background-color:rgb(32, 48, 65)">
+    <div class="navbar-divider" style="background-color:#18bc9c; height: 3px; margin: 0px 0;"></div>
     </div>
     <!--Projetos-->
     <section class="projetos">
@@ -352,6 +353,7 @@
             </div>
         </div>
     </section>
+    <div class="navbar-divider" style="background-color:#dfdfdf; height: 1px; margin: 0px 0;"></div>
     <!--Competências-->
     <section id="competencias">
         <div class="container text-center">
@@ -409,6 +411,7 @@
     </section>
     <div class="space6">
     </div>
+    <div class="navbar-divider" style="background-color:#18bc9c; height: 3px; margin: 0px 0;"></div>
     <!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
