--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <a href="https://github.com/lauramachts0" target="_blank"><i style="color:white" class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/laura-schneider-1bab1b2ba/" target="_blank"><i style="color:white" class="fab fa-linkedin"></i></a>
             <a href="https://www.instagram.com/_lauramachts/" target="_blank"><i style="color:white" class="fab fa-instagram"></i></a>
-            <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank"><i style="color:white" class="fab fa-youtube"></i></a>
+            <a href="https://www.youtube.com/channel/UCG2wUTb_Rv_vHHijOFPyO-w" target="_blank" src="https://lauramachts0.github.io/icon/"><i style="color:white" class="fab fa-youtube"></i></a>
             <div class="space1">
             </div>
     </section>
