--- a/index.html
+++ b/index.html
@@ -80,6 +80,14 @@
             background-color: #1d4d5c;
             background: linear-gradient(120deg, #408ba1, #0f3944);
         }
+        .icon{
+            margin-bottom: 16px;
+            height: 40%; 
+            width: auto;
+            width: 40px;
+            max-width: auto;
+            border-radius: 100%;
+        }
         h4{
             color: rgb(236, 236, 236);
             margin-left: 4;
@@ -119,7 +127,7 @@
 <!--HOME-->
 <body>
     <nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)">
-        <a class="navbar-brand" href="#" style=color:white>Home</a>
+        <a class="navbar-brand" href="#" style=color:white><img src="icon.png" class="icon" alt="Responsive image">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
