--- a/index.html
+++ b/index.html
@@ -121,13 +121,13 @@
         transform: scale(1.1); 
         transition: transform 0.1s ease; 
     
-}
+        }
     </style>
 </head>
 <!--HOME-->
 <body>
     <nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)">
-        <a class="navbar-brand" href="#" style=color:white><img src="icon.png" class="icon" alt="Responsive image">Home</a>
+        <a class="navbar-brand" href="#" style=color:#3e879d><img src="icon.png" class="icon" alt="Responsive image">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
