--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <!--HOME-->
 <body>
     <nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)">
-        <a class="navbar-brand" href="#" style=color:#3e879d><img src="icon.png" class="icon" alt="Responsive image">Home</a>
+        <a class="navbar-brand" href="#" style=color:#29aae1><img src="icon.png" class="icon" alt="Responsive image">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
             aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -251,7 +251,7 @@
                               alt="Thumbnail [100%x225]" src="projeto1.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse portfolio é um projeto que eu desenvolvi usando as tecnologias A, B, C.
+                                  <p class="card-text">Esse portfolio foi um projeto que eu desenvolvi usando as tecnologias A, B, C.
                                   </p>
                                   <ul>
                                       <li>HTML</li>
@@ -334,7 +334,7 @@
                                   alt="Thumbnail [100%x225]" src="projeto4.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Este projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
+                                  <p class="card-text">E Esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
                                   </p>
                                   <ul>
                                       <li>HTML</li>
