--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <p class="lead paragrafoBrancos">
                 Olá! Eu sou a Laura, tenho 19 anos e sou natural de Porto Alegre (RS). Atualmente, estou cursando Sistemas de Informação na Universidade Franciscana (UFN), em Santa Maria. Passei no vestibular aos 16 anos, e desde então mergulhei de cabeça no universo da tecnologia.
 
-                Estou imersa em uma jornada de descobertas e aprendizados constantes. Antes mesmo de ingressar na UFN, venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
+                Estou imersa em uma jornada de descobertas e aprendizados constantes. Venho desenvolvendo minhas habilidades de programação e trabalhando em diversos projetos, incluindo este portfólio que você está lendo agora.
 
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
 
@@ -233,7 +233,7 @@
             <p class="lead paragrafoBrancos">
                 Hello! My name is Laura, I'm 19 years old and I'm from Porto Alegre (RS). I am currently studying Information Systems at the Franciscan University (UFN), in Santa Maria. I passed the entrance exam at the age of 16, and since then I have entered the world of technology.
 
-                I am immersed in a journey of discovery and constant learning. Even before joining UFN, I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
+                I am immersed in a journey of discovery and constant learning. I have been developing my programming skills and working on several projects, including this portfolio you are exploring now.
 
                 I have big goals to achieve, the main one being joining the Air Force. My motivation is driven by curiosity and a constant desire to learn. I am always ready to embrace new opportunities that come my way.
 
@@ -340,7 +340,7 @@
                                   alt="Thumbnail [100%x225]" src="projeto4.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">E Esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
+                                  <p class="card-text">E esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
                                   </p>
                                   <ul>
                                       <li>HTML</li>
