--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                                       <li>CSS</li>
                                       <li>Javascript</li>
                                       <li>Bootstrap</li>
-                                      <br>
+                                      <li>jQuery</li>
                                       <br>
                                   </ul>
                                   <div class="d-flex justify-content-between align-items-center">
