--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                     <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
                         Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
                         pró-ativa e altamente eficiente.</p>
-                    <footer class="blockquote-footer">Ricardo Frolich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title"> UFN</cite>
+                    <footer class="blockquote-footer">Ricardo Frohlich - Analista de Sistemas & Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
                 <div class="space5">
