--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
             font-size: 33px;
             font-family: Lato, 'Helvetica Neue', Helvetica, Arial, sans-serif;
         }
-        me{
-            height: 50%; 
-            width: auto;
-        }
         .foto-perfil {
             height: 100%; 
             width: auto;
@@ -51,7 +47,6 @@
             font-weight: 700;
             color: white;
         }
-
         .titulosVerdes {
             text-decoration: underline;
             text-underline-position: under;
@@ -145,7 +140,6 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarsExample04">
             <ul class="navbar-nav mr-auto">
-
             </ul>
             <ul class="navbar-nav">
                 <li>
@@ -183,7 +177,8 @@
             <div class="space1">
             </div>
     </section>
-    <div class="divider"></div>
+    <div class="divider">
+    </div>
     </div>
     <!--Depoimentos-->
     </section>
@@ -211,7 +206,8 @@
                 </div>
             </div>
         </div>
-        <div class="divider"></div>
+        <div class="divider">
+        </div>
     </section>
     <!--Descrição-->
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -246,7 +242,8 @@
             <div class="space2">
         </div>
     </section>
-    <div class="divider"></div>
+    <div class="divider">
+    </div>
     </div>
     <!--Projetos-->
     <section class="projetos">
@@ -430,7 +427,8 @@
     </section>
     <div class="space6">
     </div>
-    <div class="divider"></div>
+    <div class="divider">
+    </div>
     <!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
@@ -442,7 +440,6 @@
             </div>
         </div>
     </section>
-
     <footer class="text-center" style="background-color:#2c3e50;padding:0px; margin:0px">
         <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Desenvolvido por Laura Schneider | Copyright 2023 - 2024©
         </p>
