--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
             <div class="container-fluid">
                 <h3 style="padding-top:90px;" class="text-center titulosBrancos">Disponível para oportunidades</h3>
                 <h4 style="padding-bottom:90px;margin-bottom: 0px;color:white;" class="text-center">
-                    <a href="mailto:lauramachts0@gmail.com" class="expand-on-hover">lauramachts0@gmail.com👈</a>
+                    <a href="mailto:lauramachtss@gmail.com" class="expand-on-hover">lauramachtss@gmail.com👈</a>
                 </h4>
             </div>
         </div>
