--- a/index.html
+++ b/index.html
@@ -371,67 +371,67 @@
     </div>
     <!--Competências-->
     <section id="competencias">
-        <div class="container text-center">
-            <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
-            <br>
-            <br>
-            <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
-                <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript">
-                    <img alt="JavaScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
-                </a>
-                <a href="https://www.typescriptlang.org/">
-                    <img alt="TypeScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
-                </a>
-                <a href="https://www.java.com/">
-                    <img alt="Java" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
-                </a>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/HTML">
-                    <img alt="HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
-                </a>
-                <a href="https://developer.mozilla.org/en-US/docs/Web/CSS">
-                    <img alt="CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
-                </a>
-                <a href="https://www.python.org/">
-                    <img alt="Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
-                </a>
-                <a href="https://dotnet.microsoft.com/languages/csharp">
-                    <img alt="C#" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
-                </a>
-                <a href="https://www.cplusplus.com/">
-                    <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
-                </a>
-                <a href="https://devdocs.io/c/">
-                    <img alt="C" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
-                </a>
-                <a href="https://getbootstrap.com/">
-                    <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg">
-                </a>
-                <a href="https://jquery.com/">
-                    <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
-                </a>
-                <a href="https://github.com/">
-                    <img alt="GitHub" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg">
-                </a>
-                <a href="https://git-scm.com/">
-                    <img alt="Git" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-plain.svg">
-                </a>
-                <a href="https://www.postgresql.org/">
-                    <img alt="SQL" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg">
-                </a>
-                <a href="https://www.mysql.com/">
-                    <img alt="MySQL" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
-                </a>
-                <a href="https://www.sublimetext.com/">
-                    <img alt="Sublime Text" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/en/d/d2/Sublime_Text_3_logo.png">
-                </a>
-                <a href="https://www.jetbrains.com/pycharm/">
-                    <img alt="PyCharm" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/pycharm/pycharm-original.svg">
-                </a>
-                <a href="https://code.visualstudio.com/">
-                    <img alt="VSCode" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg">
-                </a>
-            </div>
+    <div class="container text-center">
+        <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
+        <br>
+        <br>
+        <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
+            <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
+                <img alt="JavaScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+            </a>
+            <a href="https://www.typescriptlang.org/" target="_blank">
+                <img alt="TypeScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
+            </a>
+            <a href="https://www.java.com/" target="_blank">
+                <img alt="Java" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
+            </a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
+                <img alt="HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+            </a>
+            <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
+                <img alt="CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+            </a>
+            <a href="https://www.python.org/" target="_blank">
+                <img alt="Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+            </a>
+            <a href="https://dotnet.microsoft.com/languages/csharp" target="_blank">
+                <img alt="C#" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
+            </a>
+            <a href="https://www.cplusplus.com/" target="_blank">
+                <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
+            </a>
+            <a href="https://devdocs.io/c/" target="_blank">
+                <img alt="C" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+            </a>
+            <a href="https://getbootstrap.com/" target="_blank">
+                <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg">
+            </a>
+            <a href="https://jquery.com/" target="_blank">
+                <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
+            </a>
+            <a href="https://github.com/" target="_blank">
+                <img alt="GitHub" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg">
+            </a>
+            <a href="https://code.visualstudio.com/" target="_blank">
+                <img alt="VSCode" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg">
+            </a>
+            <a href="https://www.postgresql.org/" target="_blank">
+                <img alt="SQL" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg">
+            </a>
+            <a href="https://www.sublimetext.com/" target="_blank">
+                <img alt="Sublime Text" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/en/d/d2/Sublime_Text_3_logo.png">
+            </a>
+            <a href="https://git-scm.com/" target="_blank">
+                <img alt="Git" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-plain.svg">
+            </a>
+            <a href="https://www.mysql.com/" target="_blank">
+                <img alt="MySQL" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
+            </a>
+            <a href="https://www.jetbrains.com/pycharm/" target="_blank">
+                <img alt="PyCharm" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/pycharm/pycharm-original.svg">
+            </a>
         </div>
+    </div>
     </section>
     <div class="space6">
     </div>
