--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
         </script>
-
     <script src="https://kit.fontawesome.com/f0e17cbf2f.js" crossorigin="anonymous"></script>
     <style>
         p {
@@ -186,8 +185,7 @@
             <div class="space1">
             </div>
     </section>
-    <div class="divider">
-    </div>
+    <div class="divider"></div>
     </div>
     <!--Depoimentos-->
     </section>
@@ -202,8 +200,7 @@
                     <footer class="blockquote-footer">Guilherme Kurtz - Desenvolvedor Software<cite title="Source Title"> UFN</cite>
                     </footer>
                 </blockquote>
-                <div class="space4">
-                </div>
+                <div class="space4"></div>
                 <blockquote class="blockquote text-center">
                     <p class="mb-0">Super focada, dedicada, pontual com seus compromissos.
                         Interessada e super empolgada na área em que atua e nas demais, o que a torna uma pessoa
@@ -215,8 +212,7 @@
                 </div>
             </div>
         </div>
-        <div class="divider">
-        </div>
+        <div class="divider"></div>
     </section>
     <!--Descrição-->
     <section class="jumbotron text-center corPrimaria" id="sobre-mim">
@@ -232,8 +228,7 @@
                 Tenho grandes metas a serem alcançadas, sendo a principal delas ingressar na Aeronáutica. Minha motivação é impulsionada pela curiosidade e pelo desejo constante de aprendizado. Estou sempre pronta para abraçar novas oportunidades que surgem em meu caminho.
 
                 Busco constantemente o desenvolvimento pessoal e profissional, e acredito que cada desafio enfrentado representa uma oportunidade de crescimento.
-                <div class="space2">
-                </div>
+                <div class="space2"></div>
         </div>
         <div class="container">
             <h2 class="jumbotron-heading titulosBrancos">about me</h2>
@@ -248,11 +243,9 @@
 
                 I constantly seek personal and professional development, and I firmly believe that each challenge faced represents an opportunity for growth.
             </p>
-            <div class="space2">
-        </div>
+            <div class="space2"></div>
     </section>
-    <div class="divider">
-    </div>
+    <div class="divider"></div>
     </div>
     <!--Projetos-->
     <section class="projetos">
@@ -267,8 +260,7 @@
                               alt="Thumbnail [100%x225]" src="projeto1.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse portfolio foi um projeto que eu desenvolvi usando as tecnologias A, B, C.
-                                  </p>
+                                  <p class="card-text">Esse portfolio foi um projeto que eu desenvolvi usando as tecnologias A, B, C.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>CSS</li>
@@ -294,8 +286,7 @@
                                   alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C, Y.
-                                  </p>
+                                  <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C, Y.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>CSS</li>
@@ -320,8 +311,7 @@
                               alt="Thumbnail [100%x225]" src="projeto3.png" data-holder-rendered="true"
                               style="height: 225px; width: 100%a;max-width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse projeto foi desenvolvido para criar um relógio digital simples que exibe a hora atual usando as tecnologias A, B, C. 
-                                  </p>
+                                  <p class="card-text">Esse projeto foi desenvolvido para criar um relógio digital simples que exibe a hora atual usando as tecnologias A, B, C.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>CSS</li>
@@ -350,8 +340,7 @@
                                   alt="Thumbnail [100%x225]" src="projeto4.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">E esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.
-                                  </p>
+                                  <p class="card-text">E esse projeto é um simulador de piano que permite aos usuários tocar notas musicais usando o teclado do computador, foi desenvolvido usando as tecnologias A, C, B.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>Javascript</li>
@@ -377,8 +366,7 @@
             </div>
         </div>
     </section>
-    <div class="divider" style="background-color:#dfdfdf; height: 1px; margin: 0px 0;">
-    </div>
+    <div class="divider" style="background-color:#dfdfdf; height: 1px; margin: 0px 0;"></div>
     <!--Competências-->
     <section id="competencias">
     <div class="container text-center">
@@ -441,10 +429,8 @@
         </div>
     </div>
     </section>
-    <div class="space6">
-    </div>
-    <div class="divider">
-    </div>
+    <div class="space6"></div>
+    <div class="divider"></div>
     <!--contato-->
     <section Id="contato" class="corPrimaria">
         <div class="corPrimaria">
@@ -457,8 +443,7 @@
         </div>
     </section>
     <footer class="text-center" style="background-color:#2c3e50;padding:0px; margin:0px">
-        <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Desenvolvido por Laura Schneider | Copyright 2023 - 2024©
-        </p>
+        <p style="margin:0px;padding-top:15px;padding-bottom:15px;color:white !important">Desenvolvido por Laura Schneider | Copyright 2023 - 2024©</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
