--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                   alt="Thumbnail [100%x225]" src="projeto2.png" data-holder-rendered="true"
                                   style="height: 225px; width: 100%; display: block;">
                               <div class="card-body">
-                                  <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, C, Y.</p>
+                                  <p class="card-text">Esse é um projeto(calculadora) que está em desenvolvimento usando as tecnologias A, B, D, Y.</p>
                                   <ul>
                                       <li>HTML</li>
                                       <li>CSS</li>
