--- a/index.html
+++ b/index.html
@@ -373,58 +373,58 @@
         <h2 class="text-center jumbotron-heading titulosVerdes"><br>Competências</h2>
         <div class="d-flex justify-content-center align-items-center flex-wrap icon-container">
             <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
-                <img alt="JavaScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/javascript/javascript-plain.svg">
+                <img alt="JavaScript" height="100" width="100" src="javascript.svg">
             </a>
             <a href="https://www.typescriptlang.org/" target="_blank">
-                <img alt="TypeScript" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/typescript/typescript-plain.svg">
+                <img alt="TypeScript" height="100" width="100" src="typescript.svg">
             </a>
             <a href="https://www.java.com/" target="_blank">
-                <img alt="Java" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/java/java-plain.svg">
+                <img alt="Java" height="100" width="100" src="java.svg">
             </a>
             <a href="https://developer.mozilla.org/en-US/docs/Web/HTML" target="_blank">
-                <img alt="HTML" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/html5/html5-original.svg">
+                <img alt="HTML" height="100" width="100" src="html5.svg">
             </a>
             <a href="https://developer.mozilla.org/en-US/docs/Web/CSS" target="_blank">
-                <img alt="CSS" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/css3/css3-original.svg">
+                <img alt="CSS" height="100" width="100" src="css3.svg">
             </a>
             <a href="https://www.python.org/" target="_blank">
-                <img alt="Python" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/python/python-original.svg">
+                <img alt="Python" height="100" width="100" src="python.svg">
             </a>
             <a href="https://dotnet.microsoft.com/languages/csharp" target="_blank">
-                <img alt="C#" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/csharp/csharp-original.svg">
+                <img alt="C#" height="100" width="100" src="csharp.svg">
             </a>
             <a href="https://www.cplusplus.com/" target="_blank">
-                <img alt="C++" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/cplusplus/cplusplus-plain.svg">
+                <img alt="C++" height="100" width="100" src="cplusplus.svg">
             </a>
             <a href="https://devdocs.io/c/" target="_blank">
-                <img alt="C" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/c/c-original.svg">
+                <img alt="C" height="100" width="100" src="c.svg">
             </a>
             <a href="https://getbootstrap.com/" target="_blank">
-                <img alt="Bootstrap" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/bootstrap/bootstrap-original.svg">
+                <img alt="Bootstrap" height="100" width="100" src="bootstrap.svg">
             </a>
             <a href="https://jquery.com/" target="_blank">
-                <img alt="jQuery" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/jquery/jquery-plain.svg">
+                <img alt="jQuery" height="100" width="100" src="jquery.svg">
             </a>
             <a href="https://github.com/" target="_blank">
-                <img alt="GitHub" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/github/github-original.svg">
+                <img alt="GitHub" height="100" width="100" src="github.svg">
             </a>
             <a href="https://git-scm.com/" target="_blank">
-                <img alt="Git" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/git/git-plain.svg">
+                <img alt="Git" height="100" width="100" src="git.svg">
             </a>
             <a href="https://www.postgresql.org/" target="_blank">
-                <img alt="SQL" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/2/29/Postgresql_elephant.svg">
+                <img alt="SQL" height="100" width="100" src="Postgresql.svg">
             </a>
             <a href="https://www.mysql.com/" target="_blank">
-                <img alt="MySQL" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/mysql/mysql-original.svg">
+                <img alt="MySQL" height="100" width="100" src="mysql.svg">
             </a>
             <a href="https://atom-editor.cc/" target="_blank">
-                <img alt="Atom_icon" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/f/fb/Atom_editor_logo_black.svg">
+                <img alt="Atom_icon" height="100" width="100" src="Atom.svg">
             </a>
             <a href="https://www.jetbrains.com/pycharm/" target="_blank">
-                <img alt="PyCharm" height="100" width="100" src="https://raw.githubusercontent.com/devicons/devicon/master/icons/pycharm/pycharm-original.svg">
+                <img alt="PyCharm" height="100" width="100" src="pycharm.svg">
             </a>
             <a href="https://code.visualstudio.com/" target="_blank">
-                <img alt="VSCode" height="100" width="100" src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Visual_Studio_Code_1.35_icon.svg">
+                <img alt="VSCode" height="100" width="100" src="VisualStudioCode.svg">
             </a>
         </div>
     </div>
