--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
         }
     </style>
 </head>
-<!--HOME-->
 <body>
+    <!--Home-->
     <nav class="navbar navbar-expand-md navbar-light" style="background-color:rgb(32, 48, 65)">
         <a class="navbar-brand" href="#" style=color:#29aae1><img src="icon.png" class="icon" alt="Responsive image">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04"
